apps/esphome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: ghcr.io/esphome/esphome:2025.11.5
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 6052
          protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /config
          - name: cache
            mountPath: /cache
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome
        - name: cache
          persistentVolumeClaim:
            claimName: esphome-cache
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.1.129
  sessionAffinity: None
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
  selector:
    app: esphome
---
