apps/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  labels:
    app: esphome
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - esphome.bensonphillips.dev
      secretName: letsencrypt
  rules:
    - host: esphome.bensonphillips.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: esphome
                port:
                  name: http
---
